--- a/myfortfolio.html
+++ b/myfortfolio.html
@@ -24,26 +24,20 @@
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="stylesheet" href="css/layout.css">
 
-    <script src="js/plugins/jquery1.js"></script>
-    <script src="js/plugins/jquery2.js"></script>
-    <script src="js/plugins/index.js"></script>
-    <script src="js/function.js"></script>
+    <script src="js/index.js"></script>
 </head>
 
 <body>
     <div id="wrap">
         <header class="">
             <div class="container">
-                <h2 class="sr-only">박원지 포트폴리오 메뉴</h2>
-
                 <nav>
                     <ul class="gnb clearfix">
                         <li class="on"><a href="#">HOME</a></li>
-                        <li class=""><a href="#">ABOUT ME</a></li>
-                        <li class=""><a href="#">SKILLS</a></li>
-                        <li class=""><a href="#">PORTFOLIO</a></li>
-                        <li class=""><a href="#">DESIGN</a></li>
-                        <li class=""><a href="#">CONTACT</a></li>
+                        <li class=""><a href="#aboutme">ABOUT ME</a></li>
+                        <li class=""><a href="#skills">SKILLS</a></li>
+                        <li class=""><a href="#portfolio">PORTFOLIO</a></li>
+                        <li class=""><a href="#contact">CONTACT</a></li>
                     </ul>
                 </nav>
             </div>
@@ -56,6 +50,9 @@
                 <p>CREATIVE PARK WONJI</p>
                 <p>PORTFOLIO<br>VOL.1</p>
                 <h1>WEB<br>PUBLISHER<br><span class="name">박원지</span></h1>
+                <p class="des">안녕하세요. 신입 웹퍼블리셔 박원지입니다.<br>
+                    이 포트폴리오에서는 퍼블리셔를 꿈꾸며 준비한,<br>
+                    저의 노력의 결과인 작업물들을 보실 수 있습니다.🙂</p>
             </div>
         </section><!--end of main home-->
 
@@ -75,8 +72,6 @@
 
             <div class="content1-right">
                 <div class="profile">
-                    <h2 class="sr-only">프로필</h2>
-
                     <ul class="clearfix">
                         <li style="display: list-item;">
                             이름 : 박원지<br>
@@ -84,14 +79,11 @@
                             학력 : 대구가톨릭대학교 작곡실용음악 학과 졸업<br>
                             수료 내역 : 2022.8 - 2023.2 그린 아트 컴퓨터 학원<br>
                             기업요구를 반영한 디지털비즈니스 웹앱(UX)디자인 &amp; 개발자 양성과정 수료 (6개월)<br>
-                            경력 사항 : 2023.5 ~ 기업요구를 반영한 디지털비즈니스 웹앱(UX)디자인 &amp; 개발자 양성과정 멘토링 활동<br>
-                        </li>
-
-                        <li style="display: none;">
+                            <br>
+                            경력 사항 : <br>2023.5 ~ 기업요구를 반영한 디지털비즈니스 웹앱(UX)디자인 &amp; 개발자 양성과정 멘토링 활동<br>
                             <br>
                             자격증 : GTQ 그래픽기술자격 포토샵 1급 취득, GTQi 그래픽기술자격 일러스트 1급 취득,<br>
-                            GTQid 그래픽기술자격 인디자인 1급 취득,<br>
-                            웹디자인기능사 필기 취득<br>
+                            GTQid 그래픽기술자격 인디자인 1급 취득, 웹디자인기능사 필기 취득<br>
                             사회 경험 :<br>
                             · 2020.2 - 2021.6 국회사무처 인턴<br>
                         </li>
@@ -102,19 +94,12 @@
                 </div><!--end of profile-->
 
                 <div class="tag">
-                    <h2 class="sr-only">나만의 키워드 태그</h2>
-
                     <ul class="clearfix">
-                        <li><a href="#" title="프로필을 확인하세요!">#신입</a></li>
-                        <li><a href="3" title="포트폴리오 둘러보기">#웹퍼블리셔</a></li>
-                        <li><a href="4" title="포트폴리오 둘러보기">#웹디자이너</a></li>
-                        <li><a href="sub.html" title="나만의 자기소개 보러가기" target="_blank" class="link">#성장</a></li>
-                        <li class="on"><a href="5" title="기획안 보러가기">#웹기획</a></li>
-
-                        <li><a href="#" title="프로필을 확인하세요!">#자격증 컬렉터</a></li>
-                        <li><a href="3" title="포트폴리오 둘러보기">#시멘틱웹</a></li>
-                        <li><a href="4" title="디자인 둘러보기">#특기는 디자인</a></li>
-                        <li><a href="3" title="포트폴리오 둘러보기">#취미는 코딩</a></li>
+                        <li><a href="#">#신입</a></li>
+                        <li><a href="#">#퍼블리셔</a></li>
+                        <li><a href="#">#UI/UX디자이너</a></li>
+                        <li><a href="#">#웹앱</a></li>
+                        <li class="on"><a href="#">#반응형</a></li>
                     </ul>
                 </div><!--end of tag-->
             </div><!--end of right-->
@@ -126,24 +111,24 @@
             data-aos-duration="2000" class="content2" style="visibility: visible;">
             <h2>I can do</h2>
 
-            <ol class="skill clearfix">
+            <ul class="skill clearfix">
                 <li>HTML5</li>
                 <li>CSS3</li>
                 <li>Javscript</li>
                 <li>JQuery</li>
-            </ol>
+                <li>Json</li>
+            </ul>
 
             <h2>and I can do too</h2>
 
-            <ol class="tool clearfix">
-                <li>Visual Studio Code</li>
-                <li>Brackets</li>
-                <li>EditPlus</li>
-                <li>Dreamweaver</li>
+            <ul class="tool clearfix">
                 <li>Photoshop</li>
                 <li>Illustrator</li>
                 <li>Indesign</li>
-            </ol>
+                <li>Figma</li>
+                <li>GA4</li>
+                <li>TGM</li>
+            </ul>
         </section><!--end of skills-->
 
         <hr>
@@ -153,10 +138,7 @@
             <h2>Portfolio</h2>
 
             <div class="portfolio_bg">
-                <h3 class="sr-only">작업과정 살펴보기</h3>
-
                 <div class="portfolio_img">
-                    <a href="#" class="viewClose">기획안</a>
                 </div>
             </div>
 
@@ -169,7 +151,7 @@
                 </ul>
 
                 <ul class="view">
-                    <li style="display: list-item;">
+                    <li>
                         <h3>노티드<span>(포트폴리오용)</span></h3>
                         <p>
                             기존 사이트에서 불편함 점을 찾아 개선하였고,<br>
@@ -179,9 +161,12 @@
                             사용 툴 : Photoshop, Visual Studio Code<br>
                             참여도 : 100%
                         </p>
-                        <div class="view_img">메인화면 이미지 미리보기</div>
-                        <a href="images/ex_sampyo.jpg" class="viewOpen">작업과정</a>
-                        <a href="https://kim-ji-min.github.io/sampyo/" target="_blank">사이트 바로가기</a>
+                        <a href="#" class="">작업과정</a>
+                        <a href="https://dnjswlekd.github.io/firstProjects.github.io/Knotted.html/knotted(fullpage).html"
+                            target="_blank">사이트 바로가기</a>
+                        <div class="view_img" data-aos="fade-left" data-aos-offset="200" data-aos-delay="50"
+                            data-aos-duration="1000" data-aos-easing="ease-in-out" data-aos-mirror="true"
+                            data-aos-once="false">메인화면 이미지 미리보기</div>
                     </li>
 
                     <li>
@@ -195,8 +180,8 @@
                             참여도 : 100%
                         </p>
                         <div class="view_img">메인화면 이미지 미리보기</div>
-                        <a href="images/ex_line.jpg" class="viewOpen">작업과정</a>
-                        <a href="https://kim-ji-min.github.io/LINE/" target="_blank">사이트 바로가기</a>
+                        <a href="#" class="viewOpen">작업과정</a>
+                        <a href="hhttps://dnjswlekd.github.io/sing-up/sign-up.html" target="_blank">사이트 바로가기</a>
                     </li>
 
                     <li style="display: none;">
@@ -211,8 +196,8 @@
                             참여도 : 100%
                         </p>
                         <div class="view_img">메인화면 이미지 미리보기</div>
-                        <a href="images/ex_clio.jpg" class="viewOpen">작업과정</a>
-                        <a href="https://kim-ji-min.github.io/CLIO-COSMETICS/" target="_blank">사이트 바로가기</a>
+                        <a href="#" class="viewOpen">작업과정</a>
+                        <a href="#" target="_blank">사이트 바로가기</a>
                     </li>
 
                     <li style="display: none;">
@@ -227,64 +212,12 @@
                             참여도 : 100%
                         </p>
                         <div class="view_img">메인화면 이미지 미리보기</div>
-                        <a href="images/ex_090.jpg" class="viewOpen">작업과정</a>
-                        <a href="https://kim-ji-min.github.io/090Factory/" target="_blank">사이트 바로가기</a>
+                        <a href="#" class="viewOpen">작업과정</a>
+                        <a href="#" target="_blank">사이트 바로가기</a>
                     </li>
                 </ul>
             </div>
         </section><!--end of portfolio-->
-
-        <hr>
-
-        <section id="design" class="content4" data-aos="fade-up" data-aos-offset="400" data-aos-easing="ease-out-cubic"
-            data-aos-duration="2000">
-            <h2>Design</h2>
-
-            <div class="gallery_bg">
-                <h3 class="sr-only">디자인 살펴보기</h3>
-
-                <div class="gallery_img">
-                    <a href="#" class="gallClose">이미지 닫기</a>
-                </div>
-            </div>
-
-            <div class="container">
-                <ul class="clearfix">
-                    <li style="left: 0px;">
-                        <h3 class="sr-only">졸업 디자인전</h3>
-                        <ol class="gallery major clearfix">
-                            <li><a href="./image/design_1_big_poster.jpg" class="gallOpen">전시회 홍보 포스터</a></li>
-                            <li><a href="images/design_1_big_CI.jpg" class="gallOpen">CIP</a></li>
-                            <li><a href="images/design_1_big_package.jpg" class="gallOpen">꽃점 카드</a></li>
-                            <li><a href="images/design_1_big_web.jpg" class="gallOpen">웹디자인</a></li>
-                        </ol>
-                    </li>
-                    <li style="left: 990px;">
-                        <h3 class="sr-only">웹디자인</h3>
-                        <ol class="gallery web clearfix">
-                            <li><a href="images/design_3_big_cardnews.jpg" class="gallOpen">카드뉴스 디자인</a></li>
-                            <li><a href="images/design_3_big_eventpage.jpg" class="gallOpen">프로모션 이벤트 페이지</a></li>
-                            <li><a href="images/design_3_big_detailpage1.jpg" class="gallOpen">상세 페이지</a></li>
-                            <li><a href="images/design_3_big_banner.jpg" class="gallOpen">배너 디자인</a></li>
-                            <li><a href="images/design_3_big_detailpage2.jpg" class="gallOpen">디테일 페이지</a></li>
-                        </ol>
-                    </li>
-                    <li style="left: 990px;">
-                        <h3 class="sr-only">그래픽 작업물</h3>
-                        <ol class="gallery graphic clearfix">
-                            <li><a href="images/design_2_big_package.jpg" class="gallOpen">오곡발효잼 패키지 디자인</a></li>
-                            <li><a href="images/design_2_big_infographic1.jpg" class="gallOpen">콩나물 국밥 인포그래픽</a></li>
-                            <li><a href="images/design_2_big_infographic2.jpg" class="gallOpen">자기소개서 인포그래픽</a></li>
-                            <li><a href="images/design_2_big_pattern.jpg" class="gallOpen">패턴 디자인</a></li>
-                            <li><a href="images/design_2_big_BI.jpg" class="gallOpen">BI</a></li>
-                        </ol>
-                    </li>
-                </ul>
-            </div>
-
-            <button class="prev">이전</button>
-            <button class="next">다음</button>
-        </section><!--end of design-->
 
         <hr>
 
@@ -304,8 +237,9 @@
                 </p>
 
                 <div class="link clearfix">
-                    <a href="file/kimpeach_project_document.pdf" class="fileOpen" target="_blank">프로필 사이트 기획안 살펴보기</a>
-                    <a href="https://github.com/Kim-Ji-Min" class="git" target="_blank">GIT 바로가기</a>
+                    <a href="https://dnjswlekd.notion.site/Resume-28b84ea5ea0f40aea3b1b0da9d382cba?pvs=4" class="notion"
+                        target="_blank">Notion 바로가기</a>
+                    <a href="https://github.com/dnjswlekd" class="git" target="_blank">GitHub 바로가기</a>
                 </div>
             </div>
         </section><!--end of contact-->
@@ -315,7 +249,7 @@
         <footer>
             <address>
                 본 페이지는 상업적 목적이 아닌 개인 포트폴리오용으로 제작되었습니다.<br>
-                © 2019 Park, Won-Ji. All Rights Reserved.
+                © 2023 Park, Won-Ji. All Rights Reserved.
             </address>
         </footer>
     </div>
