--- a/myfortfolio.html
+++ b/myfortfolio.html
@@ -49,7 +49,7 @@
             <div class="container">
                 <p>CREATIVE PARK WONJI</p>
                 <p>PORTFOLIO<br>VOL.1</p>
-                <h1>WEB<br>PUBLISHER<br><span class="name">박원지</span></h1>
+                <h1>WEB<br>PUBLISHER<br></h1>
                 <p class="des">안녕하세요. 신입 웹퍼블리셔 박원지입니다.<br>
                     이 포트폴리오에서는 퍼블리셔를 꿈꾸며 준비한,<br>
                     저의 노력의 결과인 작업물들을 보실 수 있습니다.🙂</p>
