--- a/myfortfolio.html
+++ b/myfortfolio.html
@@ -60,39 +60,40 @@
 
         <section id="aboutme" data-aos="fade-up" data-aos-offset="400" data-aos-easing="ease-out-cubic"
             data-aos-duration="2000" class=" content1 clearfix" style="visibility: visible;">
+            <!-- left -->
             <div class="content1-left">
                 <h2>About me</h2>
-
-                <a href="sub.html" title="나만의 자기소개 보러가기" target="_blank">
-                    <p class="img">더 알아보기</p>
-                    <!-- <p class="link">CLICK HERE!</p> -->
+                <a href="">
+                    <p class="img">원지 프로필 사진</p>
                 </a>
                 <div class="about_bg"></div>
-            </div><!--end of left-->
+            </div>
+            <!--end of left-->
 
+            <!-- right -->
             <div class="content1-right">
                 <div class="profile">
                     <ul class="clearfix">
-                        <li style="display: list-item;">
+                        <li style="line-height:170%">
                             이름 : 박원지<br>
                             나이 : 26세<br>
                             학력 : 대구가톨릭대학교 작곡실용음악 학과 졸업<br>
-                            수료 내역 : 2022.8 - 2023.2 그린 아트 컴퓨터 학원<br>
-                            기업요구를 반영한 디지털비즈니스 웹앱(UX)디자인 &amp; 개발자 양성과정 수료 (6개월)<br>
+                            수료 내역 : 2022.8 - 2023.2 그린아트컴퓨터학원<br>
+                            기업요구를 반영한 디지털비즈니스 웹앱(UX)디자인 &amp; 개발자 양성과정 수료<br>
                             <br>
-                            경력 사항 : <br>2023.5 ~ 기업요구를 반영한 디지털비즈니스 웹앱(UX)디자인 &amp; 개발자 양성과정 멘토링 활동<br>
+                            경력 사항 :<br>· 2020.2 - 2021.6 국회사무처 인턴<br>
+                            · 2023.5 ~ 기업요구를 반영한 디지털비즈니스 웹앱(UX)디자인 &amp; 개발자 양성과정 멘토링 활동<br>
                             <br>
-                            자격증 : GTQ 그래픽기술자격 포토샵 1급 취득, GTQi 그래픽기술자격 일러스트 1급 취득,<br>
-                            GTQid 그래픽기술자격 인디자인 1급 취득, 웹디자인기능사 필기 취득<br>
-                            사회 경험 :<br>
-                            · 2020.2 - 2021.6 국회사무처 인턴<br>
+                            자격증 :<br>· GTQ 그래픽기술자격 포토샵 1급 취득<br>
+                            · GTQi 그래픽기술자격 일러스트 1급 취득<br>
+                            · GTQid 그래픽기술자격 인디자인 1급 취득<br>
+                            · 웹디자인기능사 필기 취득<br>
+                            · 정보처리기능사 자격증 취득 예정<br>
                         </li>
                     </ul>
-
-                    <button class="prev">이전</button>
-                    <button class="next on">다음</button>
-                </div><!--end of profile-->
-
+                    <!-- <button class="prev">이전</button>
+                    <button class="next on">다음</button> -->
+                </div>
                 <div class="tag">
                     <ul class="clearfix">
                         <li><a href="#">#신입</a></li>
@@ -101,9 +102,11 @@
                         <li><a href="#">#웹앱</a></li>
                         <li class="on"><a href="#">#반응형</a></li>
                     </ul>
-                </div><!--end of tag-->
-            </div><!--end of right-->
-        </section><!--end of about me-->
+                </div>
+            </div>
+            <!--end of right-->
+        </section>
+        <!--end of about me-->
 
         <hr>
 
@@ -112,22 +115,23 @@
             <h2>I can do</h2>
 
             <ul class="skill clearfix">
+                <li>GA4</li>
+                <li>TGM</li>
                 <li>HTML5</li>
                 <li>CSS3</li>
                 <li>Javscript</li>
                 <li>JQuery</li>
+                <li>RESTAPI</li>
                 <li>Json</li>
             </ul>
 
             <h2>and I can do too</h2>
 
             <ul class="tool clearfix">
+                <li>Figma</li>
                 <li>Photoshop</li>
                 <li>Illustrator</li>
                 <li>Indesign</li>
-                <li>Figma</li>
-                <li>GA4</li>
-                <li>TGM</li>
             </ul>
         </section><!--end of skills-->
 
