--- a/myfortfolio.html
+++ b/myfortfolio.html
@@ -97,10 +97,10 @@
                 <div class="tag">
                     <ul class="clearfix">
                         <li><a href="#">#신입</a></li>
-                        <li><a href="#">#퍼블리셔</a></li>
+                        <li class="on"><a href="#">#퍼블리셔</a></li>
                         <li><a href="#">#UI/UX디자이너</a></li>
                         <li><a href="#">#웹앱</a></li>
-                        <li class="on"><a href="#">#반응형</a></li>
+                        <li><a href="#">#반응형</a></li>
                     </ul>
                 </div>
             </div>
@@ -141,15 +141,10 @@
             data-aos-easing="ease-out-cubic" data-aos-duration="2000">
             <h2>Portfolio</h2>
 
-            <div class="portfolio_bg">
-                <div class="portfolio_img">
-                </div>
-            </div>
-
             <div class="container">
                 <ul class="mnu clearfix">
                     <li class="on"><a href="#">노티드</a></li>
-                    <li><a href="#">이누네코</a></li>
+                    <li class=""><a href="#">이누네코</a></li>
                     <li class=""><a href="#">영남대학교</a></li>
                     <li class=""><a href="#">인터파크</a></li>
                 </ul>
@@ -165,7 +160,7 @@
                             사용 툴 : Photoshop, Visual Studio Code<br>
                             참여도 : 100%
                         </p>
-                        <a href="#" class="">작업과정</a>
+                        <a href="#" class="">Github 바로가기</a>
                         <a href="https://dnjswlekd.github.io/firstProjects.github.io/Knotted.html/knotted(fullpage).html"
                             target="_blank">사이트 바로가기</a>
                         <div class="view_img" data-aos="fade-left" data-aos-offset="200" data-aos-delay="50"
@@ -184,7 +179,7 @@
                             참여도 : 100%
                         </p>
                         <div class="view_img">메인화면 이미지 미리보기</div>
-                        <a href="#" class="viewOpen">작업과정</a>
+                        <a href="#" class="viewOpen">Github 바로가기</a>
                         <a href="hhttps://dnjswlekd.github.io/sing-up/sign-up.html" target="_blank">사이트 바로가기</a>
                     </li>
 
@@ -200,7 +195,7 @@
                             참여도 : 100%
                         </p>
                         <div class="view_img">메인화면 이미지 미리보기</div>
-                        <a href="#" class="viewOpen">작업과정</a>
+                        <a href="#" class="viewOpen">Github 바로가기</a>
                         <a href="#" target="_blank">사이트 바로가기</a>
                     </li>
 
@@ -216,7 +211,7 @@
                             참여도 : 100%
                         </p>
                         <div class="view_img">메인화면 이미지 미리보기</div>
-                        <a href="#" class="viewOpen">작업과정</a>
+                        <a href="#" class="viewOpen">Github 바로가기</a>
                         <a href="#" target="_blank">사이트 바로가기</a>
                     </li>
                 </ul>
