experience 기본틀 작업 진행 중

--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1, user-scalable=no">
-    <title>박원지 포트폴리오</title>
+    <title>Wonji's portfolio</title>
 
     <meta name="Subject" content="포트폴리오">
     <meta name="Title" content="박원지 포트폴리오">
@@ -68,7 +68,7 @@
                         <li class=""><a href="#aboutme">ABOUT ME</a></li>
                         <li class=""><a href="#skills">SKILLS</a></li>
                         <li class=""><a href="#portfolio">PORTFOLIO</a></li>
-                        <li class=""><a href="#experience">EXPERIENCE</a></li>
+                        <li class=""><a href="#experiences">EXPERIENCES</a></li>
                         <li class=""><a href="#contact">CONTACT</a></li>
                     </ul>
                 </nav>
@@ -255,10 +255,21 @@
 
         <hr>
 
-        <section id="experience" class="" data-aos="fade-up" data-aos-offset="400" data-aos-easing="ease-out-cubic"
+        <section id="experiences" class="" data-aos="fade-up" data-aos-offset="400" data-aos-easing="ease-out-cubic"
             data-aos-duration="2000" style="visibility: visible; ">
             <h2>Experience</h2>
-        
+
+            <div class="experiences-wrap">
+                <div class="box">
+                    <div class="detail">
+                        <h3>Lorem ipsum dolorcadi!</h3>
+                        <span>Lorem ipsum dolor sit amet consectetur <br>adipisicing elit. Deserunt, mollitia? Explicabo
+                            tenetur natus e</span>
+                    </div>
+                </div>
+
+            </div>
+
         </section>
 
 
