--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -21,10 +21,10 @@
   <meta name="Author-Date" content="2023.06.13">
   <meta name="Copyright" content="박원지">
 
-  <link rel="shortcut icon" href="images/favicon.ico">
-  <link rel="stylesheet" href="css/layout.css">
+  <link rel="shortcut icon" href="./images/favicon.ico">
+  <link rel="stylesheet" href="./css/layout.css">
 
-  <script defer src="js/index.js"></script>
+  <script defer src="./js/index.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
