favicon 및 링크수정

--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -21,7 +21,6 @@
   <meta name="Author-Date" content="2023.06.13">
   <meta name="Copyright" content="박원지">
 
-  <link rel="shortcut icon" href="./images/favicon.ico">
   <link rel="stylesheet" href="./css/layout.css">
 
   <script defer src="./js/index.js"></script>
@@ -214,7 +213,7 @@
             </p>
             <div class="view_img"></div>
             <a href="#" class="viewOpen">Github 바로가기</a>
-            <a href="hhttps://dnjswlekd.github.io/sing-up/sign-up.html" target="_blank">사이트 바로가기</a>
+            <a href="https://dnjswlekd.github.io/sing-up/sign-up.html" target="_blank">사이트 바로가기</a>
           </li>
 
           <li style="display: none;">
