--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 
 <head>
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <meta charset="UTF-8">
