--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -2,7 +2,6 @@
 <html lang="ko">
 
 <head>
-  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <meta charset="UTF-8">
@@ -21,6 +20,14 @@
   <meta name="Location" content="Daegu Korea">
   <meta name="Author-Date" content="2023.06.13">
   <meta name="Copyright" content="박원지">
+
+  <!-- favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/image/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/image/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/image/favicon/favicon-16x16.png">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+  <!-- //favicon -->
 
   <link rel="stylesheet" href="./css/layout.css">
 
