--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -22,9 +22,9 @@
   <meta name="Copyright" content="박원지">
 
   <!-- favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/image/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/image/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/image/favicon/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./image/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./image/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./image/favicon/favicon-16x16.png">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
   <!-- //favicon -->
