--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -44,7 +44,7 @@
       <div class="modal-box modal-front">
         <i class="fas fa-laptop-code"></i>
         <h1>Wonji's Portfolio</h1>
-        <h2>이 사이트는 스터디용으로 제작되었으며<br>
+        <h2>이 사이트는 포트폴리오용으로 제작되었으며<br>
           리소스는 박원지에게 있습니다.</h2>
         <span>본 사이트는 Chrome에 최적화 되어있습니다.</span>
       </div>
@@ -52,14 +52,17 @@
       <div class="modal-box modal-back">
         <ul class="modal-list">
           <h3><i class="fas fa-bullhorn"></i> <u>이렇게 제작하였습니다</u> :) </h3>
-          <li>1. <b>Favicon</b>을 추가하였습니다.</li>
-          <li>2. Header, Visual, About us 영역을 Container 너비 기준으로 재정렬해서 <b>사용자가 보는 화면의 레이아웃을 일관성있게 재구성</b>하였습니다.
+          <li>1. <b>Favicon</b>을 제작하였습니다.</li>
+          <li>2. UX 편의성을 향상시키기 위해 <b>스크롤 시 Header 영역이 사용자가 보기 편리한 상단으로 배치</b>하였습니다.
           </li>
-          <li>3. UX 편의성을 향상시키기 위해 <b>주메뉴 및 서브메뉴에 마우스 롤오버시 포커스 유지</b> 기능을 추가하였습니다. </li>
+          <li>3. AOS 라이브러리를 사용하여 <b>스크롤을 내리는 위치에 따라 fade효과되는</b> 기능을 추가하였습니다. </li>
         </ul>
       </div>
-
       <button class="modal-close"><i class="fas fa-times"></i></button>
+      <!-- 모달버튼 하루동안 보지않기 -->
+      <!-- <div class="popup_btn">
+        <a id="chk_today" href="javascript:closeToday();" class="close_day">하루동안 보지않기</a>
+      </div> -->
     </div>
   </div>
   <!-- //modal -->
@@ -137,11 +140,10 @@
         </div>
         <div class="tag">
           <ul class="clearfix">
-            <li><a href="#">#신입</a></li>
             <li class="on"><a href="#">#퍼블리셔</a></li>
-            <li><a href="#">#UI/UX디자이너</a></li>
-            <li><a href="#">#웹앱</a></li>
+            <li><a href="#">#UX디자이너</a></li>
             <li><a href="#">#반응형</a></li>
+            <li><a href="#">#그로스마케팅</a></li>
           </ul>
         </div>
       </div>
@@ -186,19 +188,19 @@
         <ul class="mnu clearfix">
           <li class="on"><a href="#">노티드</a></li>
           <li class=""><a href="#">이누네코</a></li>
-          <li class=""><a href="#">영남대학교</a></li>
+          <!-- <li class=""><a href="#">영남대학교</a></li> -->
           <li class=""><a href="#">인터파크</a></li>
         </ul>
 
         <ul class="view">
           <li>
-            <h3>노티드<span>(포트폴리오용)</span></h3>
+            <h3>노티드<span> (팀프로젝트용)</span></h3>
             <p>
-              기존 사이트에서 불편함 점을 찾아 개선하였고,<br>
-              카피 사이트를 제작하였습니다.
+              기존 사이트가 없어 직접 제작해보기로 결정했습니다.<br>
+              실제 매장을 방문한 후 매장의 느낌을 차용하여 메인페이지를 제작하였습니다.
             </p>
             <p>
-              사용 툴 : Photoshop, Visual Studio Code<br>
+              사용 툴 : Photoshop, Illustrator, Visual Studio Code<br>
               참여도 : 100%
             </p>
             <a href="#" class="">Github 바로가기</a>
@@ -209,13 +211,14 @@
           </li>
 
           <li>
-            <h3>이누네코<span>(포트폴리오용)</span></h3>
+            <h3>이누네코<span> (팀프로젝트용)</span></h3>
             <p>
-              기존 사이트에서 반응형 페이지가 될 수 있도록<br>
-              카피 사이트를 새롭게 제작하였습니다.
+              회원가입 시 입력된 정보를 유의미하게 사용할 수 있도록<br>제작해보고 싶었고,
+              회원가입, 로그인, 마이페이지를 제작하였습니다.
             </p>
             <p>
-              사용 툴 : Photoshop, Visual Studio Code<br>
+              사용 툴 : Figma, Photoshop, Illustrator,<br>
+              Visual Studio Code, Github, Notion<br>
               참여도 : 100%
             </p>
             <div class="view_img"></div>
@@ -223,7 +226,7 @@
             <a href="https://dnjswlekd.github.io/sing-up/sign-up.html" target="_blank">사이트 바로가기</a>
           </li>
 
-          <li style="display: none;">
+          <!-- <li style="display: none;">
             <h3>영남대학교<span>(포트폴리오용)</span></h3>
             <p>
               기존 사이트에서 부족했던 정보성 콘텐츠를 중심으로<br>
@@ -237,7 +240,7 @@
             <div class="view_img"></div>
             <a href="#" class="viewOpen">Github 바로가기</a>
             <a href="#" target="_blank">사이트 바로가기</a>
-          </li>
+          </li> -->
 
           <li style="display: none;">
             <h3>인터파크<span>(포트폴리오용)</span></h3>
@@ -247,7 +250,7 @@
               서브 페이지를 새롭게 제작하였습니다.
             </p>
             <p>
-              사용 툴 : Photoshop<br>
+              사용 툴 : Figma, Photoshop, Visual Studio Code<br>
               참여도 : 100%
             </p>
             <div class="view_img"></div>
