--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -7,19 +7,6 @@
   <meta charset="UTF-8">
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1, user-scalable=no">
-  <title>Wonji's portfolio</title>
-
-  <meta name="Subject" content="포트폴리오">
-  <meta name="Title" content="박원지 포트폴리오">
-  <meta name="Keywords" content="웹퍼블리셔,웹디자이너,포트폴리오">
-  <meta name="Description" content="최적의 사용자 경험을 제공하는 것을 목표로 하는 웹 퍼블리셔">
-  <meta name="Author" content="박원지">
-  <meta name="Publisher" content="Parkwonji">
-  <meta name="Classification" content="포트폴리오">
-  <meta name="Location" content="Daegu Korea">
-  <meta name="Author-Date" content="2023.06.13">
-  <meta name="Copyright" content="박원지">
-
   <!-- favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="./image/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./image/favicon/favicon-32x32.png">
@@ -27,14 +14,22 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
   <!-- //favicon -->
+  <title>Wonji's portfolio</title>
+  <meta name="Subject" content="포트폴리오">
+  <meta name="Title" content="박원지 포트폴리오">
+  <meta name="Keywords" content="웹퍼블리셔 포트폴리오">
+  <meta name="Description" content="웹 퍼블리셔 박원지 포트폴리오입니다">
+  <meta name="Author" content="박원지">
+  <meta name="Publisher" content="Parkwonji">
+  <meta name="Classification" content="포트폴리오">
+  <meta name="Location" content="Daegu Korea">
+  <meta name="Author-Date" content="2023.06.13">
+  <meta name="Copyright" content="박원지">
 
   <link rel="stylesheet" href="./css/layout.css">
-
-  <script defer src="./js/index.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 </head>
 
 <body>
@@ -120,7 +115,7 @@
           <ul class="clearfix">
             <li style="line-height:170%">
               이름 : 박원지<br>
-              나이 : 26세<br>
+              나이 : 25세<br>
               학력 : 대구가톨릭대학교 작곡실용음악 학과 졸업<br>
               수료 내역 : 2022.8 - 2023.2 그린아트컴퓨터학원<br>
               기업요구를 반영한 디지털비즈니스 웹앱(UX)디자인 &amp; 개발자 양성과정 수료<br>
@@ -188,22 +183,22 @@
         <ul class="mnu clearfix">
           <li class="on"><a href="#">노티드</a></li>
           <li class=""><a href="#">이누네코</a></li>
-          <!-- <li class=""><a href="#">영남대학교</a></li> -->
           <li class=""><a href="#">인터파크</a></li>
+          <li class=""><a href="#">STX건설</a></li>
         </ul>
 
         <ul class="view">
           <li>
             <h3>노티드<span> (팀프로젝트용)</span></h3>
             <p>
-              기존 사이트가 없어 직접 제작해보기로 결정했습니다.<br>
+              기존에 구축된 사이트가 없어 직접 제작해보기로 결정했습니다.<br>
               실제 매장을 방문한 후 매장의 느낌을 차용하여 메인페이지를 제작하였습니다.
             </p>
             <p>
               사용 툴 : Photoshop, Illustrator, Visual Studio Code<br>
               참여도 : 100%
             </p>
-            <a href="#" class="">Github 바로가기</a>
+            <a href="https://github.com/dnjswlekd/firstProjects.github.io" class="">Github 바로가기</a>
             <a href="https://dnjswlekd.github.io/firstProjects.github.io/Knotted.html/knotted(fullpage).html"
               target="_blank">사이트 바로가기</a>
             <div class="view_img" data-aos="fade-left" data-aos-offset="200" data-aos-delay="50"
@@ -222,12 +217,27 @@
               참여도 : 100%
             </p>
             <div class="view_img"></div>
-            <a href="#" class="viewOpen">Github 바로가기</a>
+            <a href="https://github.com/dnjswlekd/dnjswlekd.github.io" class="viewOpen">Github 바로가기</a>
             <a href="https://dnjswlekd.github.io/sing-up/sign-up.html" target="_blank">사이트 바로가기</a>
           </li>
 
-          <!-- <li style="display: none;">
-            <h3>영남대학교<span>(포트폴리오용)</span></h3>
+          <li style="display: none;">
+            <h3>인터파크<span> (클론코딩)</span></h3>
+            <p>
+              기존 사이트에서 불편함 점을 찾아 개선하였고,<br>
+              클론코딩으로 제작하였습니다.
+            </p>
+            <p>
+              사용 툴 : Figma, Photoshop, Visual Studio Code<br>
+              참여도 : 100%
+            </p>
+            <div class="view_img"></div>
+            <a href="https://github.com/dnjswlekd/interpark-clone" class="viewOpen">Github 바로가기</a>
+            <a href="https://dnjswlekd.github.io/interpark-clone/index.html" target="_blank">사이트 바로가기</a>
+          </li>
+
+          <li style="display: none;">
+            <h3>STX 건설<span> (클론코딩)</span></h3>
             <p>
               기존 사이트에서 부족했던 정보성 콘텐츠를 중심으로<br>
               기업의 모토에 맞게 메인 화면과,<br>
@@ -238,25 +248,10 @@
               참여도 : 100%
             </p>
             <div class="view_img"></div>
-            <a href="#" class="viewOpen">Github 바로가기</a>
-            <a href="#" target="_blank">사이트 바로가기</a>
-          </li> -->
-
-          <li style="display: none;">
-            <h3>인터파크<span>(포트폴리오용)</span></h3>
-            <p>
-              기존 사이트에서 불편함 점을 찾아 개선하였고,<br>
-              쇼핑과 브랜드가 결합하여 메인 화면과,<br>
-              서브 페이지를 새롭게 제작하였습니다.
-            </p>
-            <p>
-              사용 툴 : Figma, Photoshop, Visual Studio Code<br>
-              참여도 : 100%
-            </p>
-            <div class="view_img"></div>
-            <a href="#" class="viewOpen">Github 바로가기</a>
-            <a href="#" target="_blank">사이트 바로가기</a>
+            <a href="https://github.com/dnjswlekd/STX" class="viewOpen">Github 바로가기</a>
+            <a href="https://dnjswlekd.github.io/STX/index.html" target="_blank">사이트 바로가기</a>
           </li>
+
         </ul>
       </div>
     </section><!--end of portfolio-->
@@ -280,8 +275,6 @@
 
     </section> -->
 
-
-
     <hr>
 
     <section id="contact" class="" data-aos="fade-up" data-aos-offset="400" data-aos-easing="ease-out-cubic"
@@ -300,7 +293,7 @@
         </p>
 
         <div class="link clearfix">
-          <a href="https://dnjswlekd.notion.site/Resume-28b84ea5ea0f40aea3b1b0da9d382cba?pvs=4" class="notion"
+          <a href="https://dnjswlekd.notion.site/c2464a78e9e14ed294996934e8b30878?pvs=4" class="notion"
             target="_blank">Notion 바로가기</a>
           <a href="https://github.com/dnjswlekd" class="git" target="_blank">GitHub 바로가기</a>
         </div>
@@ -319,7 +312,12 @@
   <script>
     AOS.init();
   </script>
-
+  <script defer src="./js/main.js"></script>
+  <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+    <![endif]-->
+  <script src="./js/prefixfree.min.js"></script>
+  <script src="./js/respond.min.js"></script>
 </body>
 
 </html>
