github.io URL 수정
노티드, 이누네코 레파지토리 이름변경

--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -198,9 +198,9 @@
               사용 툴 : Photoshop, Illustrator, Visual Studio Code<br>
               참여도 : 100%
             </p>
-            <a href="https://github.com/dnjswlekd/firstProjects.github.io" class="">Github 바로가기</a>
-            <a href="https://dnjswlekd.github.io/firstProjects.github.io/Knotted.html/knotted(fullpage).html"
-              target="_blank">사이트 바로가기</a>
+            <a href="https://github.com/dnjswlekd/Knotted" class="">Github 바로가기</a>
+            <a href="https://dnjswlekd.github.io/Knotted/Knotted.html/knotted(fullpage).html" target="_blank">사이트
+              바로가기</a>
             <div class="view_img" data-aos="fade-left" data-aos-offset="200" data-aos-delay="50"
               data-aos-duration="1000" data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"></div>
           </li>
@@ -217,8 +217,8 @@
               참여도 : 100%
             </p>
             <div class="view_img"></div>
-            <a href="https://github.com/dnjswlekd/dnjswlekd.github.io" class="viewOpen">Github 바로가기</a>
-            <a href="https://dnjswlekd.github.io/sing-up/sign-up.html" target="_blank">사이트 바로가기</a>
+            <a href="https://github.com/dnjswlekd/inuneco" class="viewOpen">Github 바로가기</a>
+            <a href="https://dnjswlekd.github.io/inuneco/sing-up/sign-up.html" target="_blank">사이트 바로가기</a>
           </li>
 
           <li style="display: none;">
