--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -199,7 +199,7 @@
               참여도 : 100%
             </p>
             <a href="https://github.com/dnjswlekd/Knotted" class="">Github 바로가기</a>
-            <a href="https://dnjswlekd.github.io/Knotted/Knotted.html/knotted(fullpage).html" target="_blank">사이트
+            <a href="https://dnjswlekd.github.io/Knotted/Knotted.html/mainPage.html" target="_blank">사이트
               바로가기</a>
             <div class="view_img" data-aos="fade-left" data-aos-offset="200" data-aos-delay="50"
               data-aos-duration="1000" data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"></div>
