--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -48,7 +48,7 @@
         <ul class="modal-list">
           <h3><i class="fas fa-bullhorn"></i> <u>이렇게 제작하였습니다</u> :) </h3>
           <li>1. <b>Favicon</b>을 제작하였습니다.</li>
-          <li>2. UX 편의성을 향상시키기 위해 <b>스크롤 시 Header 영역이 사용자가 보기 편리한 상단으로 배치</b>하였습니다.
+          <li>2. UX 편의성을 향상시키기 위해 <b>스크롤 시 Header 영역을 사용자가 보기 편리한 상단으로 배치</b>하였습니다.
           </li>
           <li>3. AOS 라이브러리를 사용하여 <b>스크롤을 내리는 위치에 따라 fade효과되는</b> 기능을 추가하였습니다. </li>
         </ul>
@@ -239,9 +239,7 @@
           <li style="display: none;">
             <h3>STX 건설<span> (클론코딩)</span></h3>
             <p>
-              기존 사이트에서 부족했던 정보성 콘텐츠를 중심으로<br>
-              기업의 모토에 맞게 메인 화면과,<br>
-              서브 페이지를 새롭게 제작하였습니다.
+              기존 사이트를 클론코딩하였습니다.
             </p>
             <p>
               사용 툴 : Photoshop, Illustrator, Visual Studio Code<br>
