이력서 download 버튼 추가

--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -294,9 +294,11 @@
           <a href="https://dnjswlekd.notion.site/c2464a78e9e14ed294996934e8b30878?pvs=4" class="notion"
             target="_blank">Notion 바로가기</a>
           <a href="https://github.com/dnjswlekd" class="git" target="_blank">GitHub 바로가기</a>
+          <a href="pdf/resume.pdf" download class="resume" target="_blank">이력서 다운받기</a>
         </div>
       </div>
-    </section><!--end of contact-->
+    </section>
+    <!--end of contact-->
 
     <hr>
 
