--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -137,7 +137,7 @@
           <ul class="clearfix">
             <li class="on"><a href="#">#퍼블리셔</a></li>
             <li><a href="#">#UX디자이너</a></li>
-            <li><a href="#">#반응형</a></li>
+            <li><a href="#">#반응형웹</a></li>
             <li><a href="#">#그로스마케팅</a></li>
           </ul>
         </div>
